name:                shoot-Em-up1
version:             0.1.0.0
license-file:        LICENSE
author:              Sander van der Somme & Martijn Dekker
maintainer:          
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable shoot-Em-up1
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  other-modules:       Bullet,
        Collisions,
        Constanten,
        Controller,
        Enemy,
        HulpFuncties,
        Level,
        Model,
        Player,
        Updates,
        View
  hs-source-dirs:      src
  default-language:    Haskell2010